tests/ui/unboxed-closures/unboxed-closures-borrow-conflict.stderr
error[E0503]: cannot use `x` because it was mutably borrowed
  --> $DIR/unboxed-closures-borrow-conflict.rs:9:14
   |
LL |     let f = || x += 1;
   |             -- - borrow occurs due to use of `x` in closure
   |             |
   |             `x` is borrowed here
LL |     let _y = x;
   |              ^ use of borrowed `x`
LL |     f;
   |     - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0503`.
